server/compilers/goLiteJS/src/test/ml1/invalid/decl13.go
// unbalanced tuple assignment
package main

var x1, x2 = 3
